--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main">
             {{>header}}
+            <p>This site uses data from mapbox.com and darksky.net</p>
         <img class="portrait" src="/img/PP.jpeg" >
         </div>
         
